# openrgb-daemon

./: Cargo.toml
data/: config.toml  openrgb-daemon.template.service
src/: cli.rs  config.rs  error.rs  main.rs  notify.rs  signals.rs
