[package]
name = "openrgb-daemon"
description = "Minimalistic and lightweight service to wrap OpenRGB server as a notify-reload Systemd daemon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = { version = "0.8.19", features = ["display"] }
libsystemd = "0.7.0"
nix = { version = "0.29.0", features = ["time"] }

tokio = { version = "1.40.0", features = ["rt", "signal", "time", "process", "macros", "sync", "io-util", "parking_lot"] }
tokio-util = { version = "0.7.12", features = ["rt", "time"] }
tokio-stream = { version = "0.1.16", features = ["io-util", "signal"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
tracing-journald = "0.3.0"

[features]
tokio-tracing = ["tokio/tracing"]

[build-dependencies]
askama = "0.12.1"
